--- a/info_parser.html
+++ b/info_parser.html
@@ -35,7 +35,7 @@
         
     const userAction = async () => 
     {
-        const response = await fetch('https://cors-anywhere.herokuapp.com/http://206.189.83.221/api/play-list?rasp_id=123qaz', 
+        const response = await fetch('https://cors-anywhere.herokuapp.com/<API>', 
               {
                 //mode: 'no-cors',
                 method: 'GET',
